Add analytics script to index.html
Integrated Super Simple Analytics script into the project by adding it to `index.html`. This enables basic website usage tracking using the specified API and website ID.

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="theme-color" content="#1976d2">
+  <script src="https://pavelpolivka-super-simple-analytics.sliplane.app/embed.min.js" data-api-url="https://pavelpolivka-super-simple-analytics.sliplane.app" data-website-id="2"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
